--- a/fitfoodie-recipesearch/src/Components/SearchBar/SearchBar.css
+++ b/fitfoodie-recipesearch/src/Components/SearchBar/SearchBar.css
@@ -1,7 +1,9 @@
 .form-control  {
-    height: 70px;
+    height: 85px;
     margin-left: 10px;
     margin-right: 10px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     width:800px;
 }
 
@@ -16,4 +18,6 @@
 
 .input-group-addon {
     margin-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
