--- a/fitfoodie-recipesearch/src/Components/QuickLinkCarousel/QuickLinks.css
+++ b/fitfoodie-recipesearch/src/Components/QuickLinkCarousel/QuickLinks.css
@@ -1,16 +1,16 @@
-.quicklinks-container {
-    border-style: solid;
-    border-width: 1px;
-    border-top: none;
-}
+
 
 #carousel {
     width: 100%;
     height: 190px;
-    margin-top: 30px;
+    margin-top: 10px;
 
     overflow: scroll;
     white-space:nowrap;
+
+    border-style: solid;
+    border-color: #ff80ff;
+    border-width: 1px;
 }
 
 #carousel .slide-pic {
