--- a/fitfoodie-recipesearch/src/Components/NavBar/NavBar.css
+++ b/fitfoodie-recipesearch/src/Components/NavBar/NavBar.css
@@ -2,3 +2,13 @@
     width: auto;
     height: 80px;
 }
+
+.heart-navbar {
+    font-size: 15px !important;
+}
+
+.nav-item {
+    margin-left: 20px;
+    margin-right: 35px;
+    font-size: 20px;
+}
