--- a/fitfoodie-recipesearch/src/Components/RandomlySelectedRecipes/RandomRecipesSquares.css
+++ b/fitfoodie-recipesearch/src/Components/RandomlySelectedRecipes/RandomRecipesSquares.css
@@ -3,6 +3,10 @@ h1 {
     margin-left: 10px;
 }
 
+h3 {
+    text-align: center;
+}
+
 .fa-heart{
     font-size: 35px;
 }
@@ -19,6 +23,7 @@ h1 {
     position: relative;
     width: 100%;
     max-width: 400px;
+    margin-top: 25px;
 }
 
 .container img {
