--- a/fitfoodie-recipesearch/src/Components/SearchBar/SearchBar.css
+++ b/fitfoodie-recipesearch/src/Components/SearchBar/SearchBar.css
@@ -7,9 +7,13 @@
     width:800px;
 }
 
+.form-control {
+    font-size: 30px !important;
+}
+
 .form-control:focus {
         border-color: #ff80ff !important;
-        box-shadow: 10px 1px 1px rgba(0, 0, 0, 0) inset, 0px 0px 8px rgba(255, 100, 255, 0.5) !important;
+        box-shadow: 0px 0px 8px rgba(255, 100, 255, 0.5) !important;
     }
 
 .form-group {
