--- a/fitfoodie-recipesearch/src/Components/Footer/Footer.css
+++ b/fitfoodie-recipesearch/src/Components/Footer/Footer.css
@@ -3,5 +3,6 @@
     border-style: solid;
     border-color: #ff80ff;
     border-width: 1px;
-    padding: 100px;
+    padding: 90px;
+    margin-top: 50px;
 }
