--- a/fitfoodie-recipesearch/src/Components/SearchBar/SearchBar.css
+++ b/fitfoodie-recipesearch/src/Components/SearchBar/SearchBar.css
@@ -8,7 +8,7 @@
 }
 
 .form-control {
-    font-size: 30px !important;
+    font-size: 25px !important;
 }
 
 .form-control:focus {
@@ -24,4 +24,13 @@
     margin-right: 10px;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.jumbotron-pic {
+    height: auto;
+    width: 100%;
+}
+
+.jumbotron {
+    padding: 0px 0px 0px 0px;
 }
