--- a/fitfoodie-recipesearch/src/Components/SearchResultsPage/SearchResults.css
+++ b/fitfoodie-recipesearch/src/Components/SearchResultsPage/SearchResults.css
@@ -20,7 +20,7 @@ h1 {
     margin-left: 10px;
 }
 
-h3 {
+h3,p {
     text-align: center;
 }
 
@@ -30,6 +30,7 @@ h3 {
 
 .row-margin {
     margin-top: 25px;
+    margin-left: 25px;
 }
 
 .random-pics {
