Fixed edge case when a nutritional value is not present

--- a/fitfoodie-recipesearch/src/Components/FullRecipePage/FullRecipe.css
+++ b/fitfoodie-recipesearch/src/Components/FullRecipePage/FullRecipe.css
@@ -1,8 +1,16 @@
+.FullRecipe-container {
+    margin-top: 20px;
+}
+
 .title-box {
     margin-left: 25px;
     text-align: center;
 }
 
 p {
-    font-size: 20px;
+    font-size: 25px;
+}
+
+li {
+    font-size: 15px;
 }
