--- a/fitfoodie-recipesearch/src/Components/FullRecipePage/FullRecipe.css
+++ b/fitfoodie-recipesearch/src/Components/FullRecipePage/FullRecipe.css
@@ -1,3 +1,10 @@
+.nutrition-text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px 0;
+}
+
 .FullRecipe-container {
     margin-top: 20px;
 }
