--- a/fitfoodie-recipesearch/src/Components/FullRecipePage/FullRecipe.css
+++ b/fitfoodie-recipesearch/src/Components/FullRecipePage/FullRecipe.css
@@ -2,7 +2,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 5px 0;
+    text-align: center;
+    margin: 5px 0 0 35px;
+}
+
+.food-image {
+    align-self: center;
 }
 
 .FullRecipe-container {
@@ -19,5 +24,5 @@ p {
 }
 
 li {
-    font-size: 15px;
+    font-size: 20px;
 }
