--- a/fitfoodie-recipesearch/src/Components/NavBar/NavBar.css
+++ b/fitfoodie-recipesearch/src/Components/NavBar/NavBar.css
@@ -14,5 +14,13 @@
 .nav-item {
     margin-left: 20px;
     margin-right: 35px;
-    font-size: 20px;
+    font-size: 25px;
+}
+
+.navbar-brand {
+    font-size: 35px;
+}
+
+.nav-item :hover {
+    color: #8627a9 !important;
 }
